# Soft

./: .gitattributes  .gitignore  CMakeLists.txt  READMD-zh.md  README.md  soft  soft.bat  soft.sh  softpm.bat  softpm_requirements.txt
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/config/: platform_config.json  soft.json
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/cpp/extension/: example_module.cpp  example_module.h  register_modules.cpp  register_modules.h
android/app/src/main/cpp/python/: pyconfig.h
android/app/src/main/cpp/soft/: classdb.cpp  module.h
android/app/src/main/python/: init.py  init_extension.cpp
android/app/src/main/python/lib/: main.py
android/app/src/main/python/lib/pages/: hello.py
android/app/src/main/python/soft/: __init__.py  __platform__.py  elements.py  style.py
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
cmake/: windows.cmake
config/: font.json  softpm.json
extension/: example_module.h  register_modules.cpp  register_modules.h
lib/: main.py
lib/pages/: hello.py
linux/: .clangd  element.cpp  element.h  main.cpp  style.cpp  style.h  test  test.c  types.h  x11_driver.cpp  x11_driver.h
python/: web-python.tar.bz2
scripts/: build_android.py  build_linux.py  build_module.py  build_modules.py  build_web.py  build_windows.py  extract_zip.py  get_files.py  get_packages.py  get_platform.py  print_data.py  soft.py  softpm-windows.py  softpm_linux.py  write_cmake.py
softpm/: softpm-linux.py  softpm-windows.py  softpm.py
src/cpp/private/soft/: get_json.cpp  style.cpp  style.h  types.cpp  types.h
src/cpp/public/soft/: classdb.h
src/cpp/soft/: get_json.h  types.cpp  types.h
src/python/soft/: __init__.py  __platform__.py  elements.py
src/soft/: __init__.py  elements.py  style.py
src/soft/include/soft/: .clangd  style.h  types.cpp  types.h
types/: example_module.pyi
web/: index.html  soft.js  style.css
web/scripts/: getFile.js  soft.js
windows/: .clangd  element.cpp  element.h  main.cpp  style.cpp  style.h  types.cpp  types.h  utils.cpp  utils.h  vars.h
windows_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
(+9 files in other folders)
